=================
Version 1.8.0.0
=================

=================
Version 1.7.1.0
=================

Fixed Bugs:
- Timer throw errors for missing callback when no callback was registered.

=================
Version 1.7.0.0
=================

New Features:
- Made different Layouts per Scene possible.
- Added an Event Based script mode. Scenes with this mode don't start the next scene
  automatically after finishing and instead continue listening for events.
- Added callbacks to PlayerEventCommunicator, PlayerIcons, PlayerMediaPlayer, 
  PlayerNotification, PlayerStorage, PlayerTimer.
- pages.contains implemented for EOS teaes.

Changes:
- Downloaded EOS scripts use the new Event Based script mode since that mirrors the 
  behavior on Milovana.
- Some Undocumented timer features of EOS are now supported, where variables in 
  timeouts are evaluated before parsing.

Fixed Bugs:
- Fixed Milovana Downloads. They should work again.
- EOS scripts center text again if orientation argument is not given.
- Fixed goto in a UI eval call not blocking the Scene until the Scene has switched.
  This has led to (mostly) EOS scripts not behaving as expected.
- Fixed an issue with EOS buttons following the wrong branch if the choice had 0 children.
- PlayerNotifcation should close open notificaions if a new one with the same id
  is opened.
- Fixed PlayerEval getting the return value from the wrong script in synchronously
  running eval requests.
- PlayerEval scripts now behave like in a browser (root can be referenced via 'window')
- Fixed script tags in button texts not being evaluated.
- Default Layout for EOS is the old one again.
- Fixed teaseStorage.removeItem setting the item to null instead of removing it from storage.
- PlayerSceneManager gotoScene and pages.goto doesn't stop with an error anymore
  if the Scene doesn't exist.
- If a PlayerTimer in an EOS script is abborted, it should not play the child instructions.