@@ -2,6 +2,9 @@
 Version 1.8.0.0
 =================
 
+Fixed Bugs:
+- Project exports now correctly handle Resource bundles and archives.
+
 =================
 Version 1.7.1.0
 =================
